--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,31 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+<div class="chart-container">
+  <h2>Live Market Chart</h2>
+  <!-- TradingView Widget -->
+  <div class="tradingview-widget-container">
+    <div id="tradingview-chart"></div>
+    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+    <script type="text/javascript">
+      new TradingView.widget({
+        "autosize": true,
+        "symbol": "BITGET:BTCUSDT",
+        "interval": "15",
+        "timezone": "Etc/UTC",
+        "theme": "light",
+        "style": "1",
+        "locale": "en",
+        "toolbar_bg": "#f1f3f6",
+        "enable_publishing": false,
+        "hide_top_toolbar": true,
+        "hide_side_toolbar": false,
+        "allow_symbol_change": true,
+        "container_id": "tradingview-chart"
+      });
+    </script>
+  </div>
+</div>
   <div class="container">
     <h1>Bitget Grid Bot</h1>
     
